--- a/src/PanelRoute.html
+++ b/src/PanelRoute.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./home.css" />
+    <link rel="stylesheet" href="./PanelRoute.css" />
     <title>Home</title>
   </head>
 
@@ -12,5 +12,5 @@
     <div id="root"></div>
   </body>
 
-  <script type="module" src="./home.tsx"></script>
+  <script type="module" src="./PanelRoute.tsx"></script>
 </html>
